--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
 <canvas id="marker" width="600" height="400"></canvas>
 
+<script src="./utils/ClientEvent.js"></script>
 <script src="./widgets/RectWidget.js"></script>
 <script src="./widgets/MarkWidget.js"></script>
 <script src="./widgets/BackgroundWidget.js"></script>
